# mailinabox

./: .dockerignore  .editorconfig  .gitignore  LICENSE  README.md  THIRD-PARTY-NOTICES.md  Vagrantfile  pyproject.toml  security.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-build-check.yml  docker-publish.yml  docs.yml  frontend-release.yml  project-release.yml  python-ci.yml  typescript-check.yml
conf/: dovecot-mailboxes.conf  mozilla-autoconfig.xml  nginx-alldomains.conf  nginx-filebrowser.conf  nginx-primaryonly.conf  nginx-top.conf
conf/fail2ban/: jails.conf
conf/zpush/: backend_combined.php  backend_imap.php
daemon/: go.mod  go.sum
daemon/systemd/: mailinabox-helper.service
deploy/: update-pins.py
deploy/docker/: .env.example  common-entrypoint.sh  control-socket-server.py  docker-compose.prod.yml  docker-compose.yml  systemctl-stub.sh
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.vue  main.ts  types.ts
management/: auth.py  backup.py  daemon.py  dns_update.py  mailconfig.py  mfa.py  status_checks.py  web_update.py
management/api/: mailinabox.yml
management/auth/: api_tokens.py  (+3 more)
setup/: bootstrap.sh  filebrowser.sh  firstuser.sh  functions.sh  install.sh  mail-postfix.sh  management.sh  migrate.py  network-checks.sh  preflight.sh  questions.sh  radicale.sh  start.sh  system.sh  web.sh  webmail.sh
tests/: conftest.py  fail2ban.py
(+529 files in other folders)
